--- a/pom.xml
+++ b/pom.xml
@@ -14,19 +14,18 @@
     <name>Vendor Compliance</name>
     <description>Vendor Compliance – Document Validator</description>
 
-    <!-- ================= JAVA VERSION ================= -->
-    <properties>
-        <java.version>17</java.version>
-        <spring.boot.version>3.2.0</spring.boot.version>
-    </properties>
-
-    <!-- ================= SPRING BOOT PARENT ================= -->
+    <!-- ================= SPRING BOOT PARENT (NO PROPERTY HERE) ================= -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>${spring.boot.version}</version>
+        <version>3.2.0</version>   <!-- ✅ HARD CODED -->
         <relativePath/>
     </parent>
+
+    <!-- ================= PROPERTIES ================= -->
+    <properties>
+        <java.version>17</java.version>
+    </properties>
 
     <!-- ================= DEPENDENCIES ================= -->
     <dependencies>
@@ -49,7 +48,7 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!-- MySQL Driver (VERSION IS REQUIRED) -->
+        <!-- MySQL Driver -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -63,7 +62,7 @@
             <version>2.3.0</version>
         </dependency>
 
-        <!-- Jakarta Servlet API (for HealthServlet) -->
+        <!-- Jakarta Servlet API -->
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
@@ -86,7 +85,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Spring Boot Test (JUnit excluded, TestNG used) -->
+        <!-- Spring Boot Test (JUnit excluded) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -105,7 +104,7 @@
 
     </dependencies>
 
-    <!-- ================= BUILD CONFIG ================= -->
+    <!-- ================= BUILD ================= -->
     <build>
         <plugins>
 
@@ -120,13 +119,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Spring Boot Plugin -->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-
-            <!-- TestNG Surefire -->
+            <!-- Surefire for TestNG -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
