--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,22 +23,17 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# ⚠️ IMPORTANT: Use MySQLDialect (Spring Boot 3)
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # ===============================
-# Swagger/OpenAPI
+# Swagger
 # ===============================
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui/index.html
 
 # ===============================
-# JWT Configuration
+# JWT (required by JwtUtil)
 # ===============================
-jwt.secret=MySecretKeyForJwtToken12345MySecretKeyForJwtToken12345
-jwt.expiration=86400000
-
-# ===============================
-# Security (Optional - for debugging)
-# ===============================
-logging.level.org.springframework.security=DEBUG
+jwt.secret=MySecretKeyForJwtToken12345
+jwt.expiration=3600000
