--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.application.name=demo
 server.port=9001
 server.forward-headers-strategy=framework
 
+# ❌ Disable Spring Boot Whitelabel Error Page
+server.error.whitelabel.enabled=false
+
 # ===============================
 # Datasource (MySQL)
 # ===============================
